<resources>
    <string name="app_name">   BIG O</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="big_o">Big O</string>
    <string name="email_address">Email Address</string>
    <string name="complexity">Complexity</string>
    <string name="email_subject">Email Subject</string>
    <string name="data_structure">Data Structure</string>
    <string name="operations">Operations</string>
    <string name="Case">Case</string>
    <!-- <string name="average">Average</string>-->
    <string name="worstCase">Worst Case</string>
    <string name="averageCase">Average Case</string>
    <string name="getMin">Get Min</string>
    <string name="insert">Insert</string>
    <string name="search">Search</string>
    <string name="result">Result</string>
    <string name="to">To: </string>
    <string name="subject">Subject: </string>
    <string name="action_compose">actioncompose</string>
</resources>