<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/teal_700"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/email"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_Email_Address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewEmail"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <EditText
        android:id="@+id/editText_email_subject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_subject"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editText_Email_Address"

        app:layout_constraintStart_toStartOf="@+id/editText_Email_Address"
        app:layout_constraintTop_toBottomOf="@+id/editText_Email_Address" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/complexity"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintStart_toStartOf="@+id/textViewEmail"
        app:layout_constraintTop_toBottomOf="@+id/editText_email_subject" />

    <TextView
        android:id="@+id/result_TextView"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/result"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroup" />

    <TextView
        android:id="@+id/textView_Data_struct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/data_structure"
        app:layout_constraintStart_toStartOf="@+id/editText_email_subject"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:entries="@array/structureList"
        app:layout_constraintEnd_toEndOf="@+id/editText_email_subject"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView_Data_struct"
        app:layout_constraintTop_toBottomOf="@+id/textView_Data_struct"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/operations_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/operations"
        app:layout_constraintStart_toStartOf="@+id/textView_Data_struct"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/case_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Case"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/operations_TextView"
        app:layout_constraintTop_toBottomOf="@+id/getMin_Checkbox" />

    <CheckBox
        android:id="@+id/getMin_Checkbox"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/getMin"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/insert_CheckBox"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/operations_TextView"
        app:layout_constraintTop_toBottomOf="@+id/operations_TextView" />

    <CheckBox
        android:id="@+id/insert_CheckBox"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:text="@string/insert"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/getMin_Checkbox"
        app:layout_constraintEnd_toStartOf="@+id/search_Checkbox"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/getMin_Checkbox" />

    <CheckBox
        android:id="@+id/search_Checkbox"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:text="@string/search"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/insert_CheckBox"
        app:layout_constraintEnd_toEndOf="@+id/editText_email_subject"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/insert_CheckBox" />

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="9dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/search_Checkbox"
        app:layout_constraintStart_toStartOf="@+id/getMin_Checkbox"
        app:layout_constraintTop_toBottomOf="@+id/case_TextView">

        <RadioButton
            android:id="@+id/averageCase_RadioButton"
            android:layout_width="match_parent"
            android:checked="true"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/averageCase"
            android:onClick="onClick"/>

        <RadioButton
            android:id="@+id/worstCase_RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/worstCase"
            android:onClick="onClick"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textViewTo"
        android:layout_width="36dp"
        android:layout_height="21dp"
        android:layout_marginTop="12dp"
        android:text="@string/to"
        app:layout_constraintStart_toStartOf="@+id/case_TextView"
        app:layout_constraintTop_toBottomOf="@+id/result_TextView" />

    <TextView
        android:id="@+id/TextViewSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/subject"
        app:layout_constraintStart_toStartOf="@+id/textViewTo"
        app:layout_constraintTop_toBottomOf="@+id/textViewTo" />
</androidx.constraintlayout.widget.ConstraintLayout>